@@ -39,6 +39,7 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_CSH : TAGLIB + 'shtags',
              synglob.ID_LANG_CSS : TAGLIB + 'csstags',
              synglob.ID_LANG_D : TAGLIB + 'dtags',
+             synglob.ID_LANG_DIFF : TAGLIB + 'difftags',
              synglob.ID_LANG_ESS : TAGLIB + 'esstags',
              synglob.ID_LANG_F77 : TAGLIB + 'fortrantags',
              synglob.ID_LANG_F95 : TAGLIB + 'fortrantags',
