@@ -7,7 +7,8 @@
 Version 1.0
 Released: 0x/xx/2010
 
-+Add support for Java to CodeBrowser (patch from Eric Gaudet)
++Add support for Java (patch from Eric Gaudet)
++Add support for Diff files (patch from Eric Gaudet)
 
 
 #-----------------------------------------------------------------------------#
